# plugin

./: .gitignore  .gitlab-ci-release.yml  .gitlab-ci.yml  CMakeLists.txt  Commands.txt  DataRefs.txt  readme-ap.md  readme.md  saitek.sln  saitek.vcxproj  saitek.vcxproj.filters
config/: B738.txt  B738_skip.txt  BE58.txt  C172.txt  SF50.txt  SR22.txt  TEST.txt  default.txt
config/BE58/: ap.txt  bip0.txt  bip1.txt  radio.txt  sw0.txt  sw1.txt
config/BE58/BIP/: bip0.txt  bip1.txt
config/BE58/SW/: sw0.txt  sw1.txt
config/C172/: ap.txt  bip0.txt  bip1.txt  radio.txt  sw0.txt  sw1.txt
config/C172/AP/: audio.txt  brightness.txt  electricity.txt  engine.txt  radio.txt  system.txt
config/C172/BIP/: bip.txt  bip0.txt
config/C172/SW/: sw0.txt  sw1.txt
config/SF50/: ap.txt  radio.txt  sw0.txt  sw1.txt
config/SF50/AP/: audio.txt
config/SF50/SW/: sw0.txt  sw1.txt
config/SR22/: ap.txt  bip0.txt  radio.txt  sw1.txt
config/TEST/: ap.txt  bip.txt  radio.txt
config/ZIBO/: 00.txt  01.txt  02.txt  03.txt  04.txt  05.txt
config/ZIBO/AP/: ap.txt  item.txt  main.txt
config/ZIBO/BIP/: bip0.txt  bip_todo.txt
config/ZIBO/Radio/: item.txt  main.txt
config/ZIBO/SW/: sw0.txt  sw1.txt  sw_todo.txt
config/ZIBO/docs/: B738_Commands.txt  B738_Datarefs.txt
config/all/: ap.txt  g1000.txt  g430.txt
config/all/ap/: ap.txt  audio.txt  item.txt  mode.txt  radio.txt
config/all/ap/garmin/: g1000.txt  g1000n1.txt  g1000n2.txt  g430.txt
config/all/garmin/: g1000.txt  g1000n1.txt  g1000n2.txt  g430.txt  g430n1.txt  g430n2.txt
config/all/item/: ap.txt  radio.txt
config/all/radio/: g1000.txt  g430.txt  item.txt  mode.txt
config/default/: ap.txt  bip.txt  radio.txt  sw.txt
docs/: bip.md  display.md  main.md  multi.md  radio.md  swith.md
src/: bip.cpp  bip.h  debug.cpp  debug.h  init.cpp  init.h  main.cpp  main.h  multi.cpp  multi.h  panel.cpp  panel.h  panels.cpp  panels.h  plugin.cpp  plugin.h  radio.cpp  radio.h  spec.h  swith.cpp  swith.h
src/action/: sw.cpp  sw.h  swcmd.cpp  swcmd.h  swdec.cpp  swdec.h  swload.cpp  swload.h  swoff.cpp  swoff.h  swon.cpp  swon.h  swpush.cpp  swpush.h  swrun.cpp  swrun.h  swset.cpp  swset.h
src/autopilot/: ap.cpp  ap.h  apAdd.cpp  apAdd.h  apCmd.cpp  apCmd.h  apCopy.cpp  apCopy.h  apDisplay.cpp  apDisplay.h  apIf.cpp  apIf.h  apList.cpp  apList.h  apLoad.cpp  apLoad.h  apOff.cpp  apOff.h  apQuad.cpp  apQuad.h  apRadio.cpp  apRadio.h
src/color/: cell.cpp  cell.h  color.cpp  color.h  light.h
src/display/: data.cpp  data.h  dataDiv.cpp  dataDiv.h  dataDouble.cpp  dataDouble.h  dataFloat.cpp  dataFloat.h  dataInt.cpp  dataInt.h  dataInt1.cpp  dataInt1.h  dataInt2.cpp  dataInt2.h  dataLoad.cpp  dataLoad.h  dataMInt.cpp  dataMInt.h  dataShort.cpp  dataShort.h  dataSmart.cpp  dataSmart.h  monitor.cpp  monitor.h
src/form/: APForm.cpp  APForm.h  BIPForm.cpp  BIPForm.h  RadioForm.cpp  RadioForm.h  SWForm.cpp  SWForm.h  apCaption.cpp  apCaption.h  form.cpp  form.h  item.cpp  item.h
src/libs/: debug.cpp  debug.h  line.cpp  line.h  spec.cpp  spec.h  spec.txt
src/loader/: content.cpp  content.h  lines.h  reader.cpp  reader.h
src/output/: customRef.cpp  customRef.h  customWrite.cpp  customWrite.h
src/panel/: bip.cpp  bip.h  multi.cpp  multi.h  panel.cpp  panel.h  panels.cpp  panels.h  radio.cpp  radio.h  swith.cpp  swith.h
src/radio/: mode.cpp  mode.h  modeAdd.cpp  modeAdd.h  modeCMD.cpp  modeCMD.h  modeCommand.cpp  modeCommand.h  modeDefault.cpp  modeDefault.h  modeDual.cpp  modeDual.h  modeExec.cpp  modeExec.h  modeHold.cpp  modeHold.h  modeIf.cpp  modeIf.h  modeList.cpp  modeList.h  modeLoad.cpp  modeLoad.h  modeLong.cpp  modeLong.h  modeOff.cpp  modeOff.h  modePush.cpp  modePush.h  modeShow.cpp  modeShow.h  modeTimeout.cpp  modeTimeout.h  modeValue.cpp  modeValue.h
src/range/: range.cpp  range.h  rangeAnd.cpp  rangeAnd.h  rangeLoader.cpp  rangeLoader.h  rangeOr.cpp  rangeOr.h  rangeValue.cpp  rangeValue.h
src/source/: array.cpp  array.h  command.cpp  command.h  const.cpp  const.h  dataref.cpp  dataref.h  sources.cpp  sources.h  value.cpp  value.h
tests/: main.cpp  main.h
tools/gitlab/: build.yml  deploy.yml  linux.yml  package.yml  qa.yml  release.yml  test.yml  upload.yml
tools/linux-images/: Dockerfile  debian_10  debian_11  readme.txt  ubuntu_20_04  ubuntu_21_10  ubuntu_22_04  ubuntu_22_10
